QueryManager/app/ioteql.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

'use strict';

function peg$subclass(child, parent) {
	function ctor() {
		this.constructor = child;
	}
	ctor.prototype = parent.prototype;
	child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
	this.message = message;
	this.expected = expected;
	this.found = found;
	this.location = location;
	this.name = 'SyntaxError';

	if (typeof Error.captureStackTrace === 'function') {
		Error.captureStackTrace(this, peg$SyntaxError);
	}
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
	var DESCRIBE_EXPECTATION_FNS = {
		literal: function(expectation) {
			return '"' + literalEscape(expectation.text) + '"';
		},

		class: function(expectation) {
			var escapedParts = '',
				i;

			for (i = 0; i < expectation.parts.length; i++) {
				escapedParts +=
					expectation.parts[i] instanceof Array
						? classEscape(expectation.parts[i][0]) +
						  '-' +
						  classEscape(expectation.parts[i][1])
						: classEscape(expectation.parts[i]);
			}

			return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']';
		},

		any: function(expectation) {
			return 'any character';
		},

		end: function(expectation) {
			return 'end of input';
		},

		other: function(expectation) {
			return expectation.description;
		},
	};

	function hex(ch) {
		return ch
			.charCodeAt(0)
			.toString(16)
			.toUpperCase();
	}

	function literalEscape(s) {
		return s
			.replace(/\\/g, '\\\\')
			.replace(/"/g, '\\"')
			.replace(/\0/g, '\\0')
			.replace(/\t/g, '\\t')
			.replace(/\n/g, '\\n')
			.replace(/\r/g, '\\r')
			.replace(/[\x00-\x0F]/g, function(ch) {
				return '\\x0' + hex(ch);
			})
			.replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
				return '\\x' + hex(ch);
			});
	}

	function classEscape(s) {
		return s
			.replace(/\\/g, '\\\\')
			.replace(/\]/g, '\\]')
			.replace(/\^/g, '\\^')
			.replace(/-/g, '\\-')
			.replace(/\0/g, '\\0')
			.replace(/\t/g, '\\t')
			.replace(/\n/g, '\\n')
			.replace(/\r/g, '\\r')
			.replace(/[\x00-\x0F]/g, function(ch) {
				return '\\x0' + hex(ch);
			})
			.replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
				return '\\x' + hex(ch);
			});
	}

	function describeExpectation(expectation) {
		return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
	}

	function describeExpected(expected) {
		var descriptions = new Array(expected.length),
			i,
			j;

		for (i = 0; i < expected.length; i++) {
			descriptions[i] = describeExpectation(expected[i]);
		}

		descriptions.sort();

		if (descriptions.length > 0) {
			for (i = 1, j = 1; i < descriptions.length; i++) {
				if (descriptions[i - 1] !== descriptions[i]) {
					descriptions[j] = descriptions[i];
					j++;
				}
			}
			descriptions.length = j;
		}

		switch (descriptions.length) {
			case 1:
				return descriptions[0];

			case 2:
				return descriptions[0] + ' or ' + descriptions[1];

			default:
				return (
					descriptions.slice(0, -1).join(', ') +
					', or ' +
					descriptions[descriptions.length - 1]
				);
		}
	}

	function describeFound(found) {
		return found ? '"' + literalEscape(found) + '"' : 'end of input';
	}

	return (
		'Expected ' +
		describeExpected(expected) +
		' but ' +
		describeFound(found) +
		' found.'
	);
};

function peg$parse(input, options) {
	options = options !== void 0 ? options : {};

	var peg$FAILED = {},
		peg$startRuleFunctions = {start: peg$parsestart},
		peg$startRuleFunction = peg$parsestart,
		peg$c0 = function(seq) {
			return {seq: seq};
		},
		peg$c1 = peg$otherExpectation('seq'),
		peg$c2 = function(query, seq) {
			return seq ? [query].concat(seq) : [query];
		},
		peg$c3 = function(header, body) {
			return Object.assign(header, body);
		},
		peg$c4 = function(command, type, options) {
			return {header: Object.assign(command, type, options)};
		},
		peg$c5 = function(command, type) {
			return {header: Object.assign(command, type)};
		},
		peg$c6 = '$',
		peg$c7 = peg$literalExpectation('$', false),
		peg$c8 = function(_queryCommand) {
			return _queryCommand;
		},
		peg$c9 = function() {
			return {command: text()};
		},
		peg$c10 = 'create',
		peg$c11 = peg$literalExpectation('create', false),
		peg$c12 = 'read',
		peg$c13 = peg$literalExpectation('read', false),
		peg$c14 = 'update',
		peg$c15 = peg$literalExpectation('update', false),
		peg$c16 = 'delete',
		peg$c17 = peg$literalExpectation('delete', false),
		peg$c18 = '[',
		peg$c19 = peg$literalExpectation('[', false),
		peg$c20 = ']',
		peg$c21 = peg$literalExpectation(']', false),
		peg$c22 = function(_queryType) {
			return {type: _queryType};
		},
		peg$c23 = 'flow',
		peg$c24 = peg$literalExpectation('flow', false),
		peg$c25 = 'node',
		peg$c26 = peg$literalExpectation('node', false),
		peg$c27 = 'ontology',
		peg$c28 = peg$literalExpectation('ontology', false),
		peg$c29 = peg$otherExpectation('options'),
		peg$c30 = '(',
		peg$c31 = peg$literalExpectation('(', false),
		peg$c32 = ')',
		peg$c33 = peg$literalExpectation(')', false),
		peg$c34 = function(options) {
			return {options: options};
		},
		peg$c35 = ',',
		peg$c36 = peg$literalExpectation(',', false),
		peg$c37 = function(option, options) {
			return Object.assign(option, options);
		},
		peg$c38 = function(nodeType) {
			return makeObject('type', nodeType);
		},
		peg$c39 = function(first, rest) {
			return Object.assign(first, rest);
		},
		peg$c40 = '=',
		peg$c41 = peg$literalExpectation('=', false),
		peg$c42 = function(name, value) {
			return makeObject(name, value);
		},
		peg$c43 = function(name) {
			return makeObject(name, true);
		},
		peg$c44 = '"',
		peg$c45 = peg$literalExpectation('"', false),
		peg$c46 = function(value) {
			return value;
		},
		peg$c47 = "'",
		peg$c48 = peg$literalExpectation("'", false),
		peg$c49 = 'MqttSink',
		peg$c50 = peg$literalExpectation('MqttSink', false),
		peg$c51 = 'MqttSource',
		peg$c52 = peg$literalExpectation('MqttSource', false),
		peg$c53 = 'Filter',
		peg$c54 = peg$literalExpectation('Filter', false),
		peg$c55 = 'Map',
		peg$c56 = peg$literalExpectation('Map', false),
		peg$c57 = 'Reduce',
		peg$c58 = peg$literalExpectation('Reduce', false),
		peg$c59 = 'OntologySource',
		peg$c60 = peg$literalExpectation('OntologySource', false),
		peg$c61 = 'OntologySink',
		peg$c62 = peg$literalExpectation('OntologySink', false),
		peg$c63 = 'Grouping',
		peg$c64 = peg$literalExpectation('Grouping', false),
		peg$c65 = function() {
			return text();
		},
		peg$c66 = '{',
		peg$c67 = peg$literalExpectation('{', false),
		peg$c68 = '}',
		peg$c69 = peg$literalExpectation('}', false),
		peg$c70 = function(pairs) {
			return {body: pairs};
		},
		peg$c71 = function(pair, pairs) {
			return Object.assign(pair, pairs);
		},
		peg$c72 = function(pair) {
			return pair;
		},
		peg$c73 = function(pair) {
			return pair;
		},
		peg$c74 = ':',
		peg$c75 = peg$literalExpectation(':', false),
		peg$c76 = /^[a-zA-z]/,
		peg$c77 = peg$classExpectation([['a', 'z'], ['A', 'z']], false, false),
		peg$c78 = function(letters) {
			return makeString(letters);
		},
		peg$c79 = function(first, rest) {
			return [first].concat(rest);
		},
		peg$c80 = function(last) {
			return [last];
		},
		peg$c81 = function(first, second) {
			return {type: 'tuple', value: {first: first, second: second}};
		},
		peg$c82 = function(value) {
			return {type: 'object', value: value};
		},
		peg$c83 = function(value) {
			return {type: 'array', value: value};
		},
		peg$c84 = '$ref(',
		peg$c85 = peg$literalExpectation('$ref(', false),
		peg$c86 = function(options) {
			return {type: 'ref', value: options};
		},
		peg$c87 = function(pairs) {
			return pairs;
		},
		peg$c88 = function(values) {
			return values;
		},
		peg$c89 = function(value) {
			return {type: 'number', value: value};
		},
		peg$c90 = function(value) {
			return {type: 'string', value: value};
		},
		peg$c91 = function(value) {
			return {type: 'boolean', value: value};
		},
		peg$c92 = peg$otherExpectation('string'),
		peg$c93 = '\\',
		peg$c94 = peg$literalExpectation('\\', false),
		peg$c95 = peg$anyExpectation(),
		peg$c96 = function(char) {
			return char;
		},
		peg$c97 = function(sequence) {
			return sequence;
		},
		peg$c98 = 'b',
		peg$c99 = peg$literalExpectation('b', false),
		peg$c100 = function() {
			return '\b';
		},
		peg$c101 = 'f',
		peg$c102 = peg$literalExpectation('f', false),
		peg$c103 = function() {
			return '\f';
		},
		peg$c104 = 'n',
		peg$c105 = peg$literalExpectation('n', false),
		peg$c106 = function() {
			return '\n';
		},
		peg$c107 = 'r',
		peg$c108 = peg$literalExpectation('r', false),
		peg$c109 = function() {
			return '\r';
		},
		peg$c110 = 't',
		peg$c111 = peg$literalExpectation('t', false),
		peg$c112 = function() {
			return '\t';
		},
		peg$c113 = 'v',
		peg$c114 = peg$literalExpectation('v', false),
		peg$c115 = function() {
			return '\x0B';
		},
		peg$c116 = peg$otherExpectation('number'),
		peg$c117 = /^[0-9]/,
		peg$c118 = peg$classExpectation([['0', '9']], false, false),
		peg$c119 = function(digits) {
			return makeInteger(digits);
		},
		peg$c120 = peg$otherExpectation('boolean'),
		peg$c121 = 'true',
		peg$c122 = peg$literalExpectation('true', false),
		peg$c123 = function() {
			return true;
		},
		peg$c124 = 'false',
		peg$c125 = peg$literalExpectation('false', false),
		peg$c126 = function() {
			return false;
		},
		peg$c127 = peg$otherExpectation('whitespace'),
		peg$c128 = /^[ \t\r\n]/,
		peg$c129 = peg$classExpectation([' ', '\t', '\r', '\n'], false, false),
		peg$currPos = 0,
		peg$savedPos = 0,
		peg$posDetailsCache = [{line: 1, column: 1}],
		peg$maxFailPos = 0,
		peg$maxFailExpected = [],
		peg$silentFails = 0,
		peg$result;

	if ('startRule' in options) {
		if (!(options.startRule in peg$startRuleFunctions)) {
			throw new Error(
				'Can\'t start parsing from rule "' + options.startRule + '".'
			);
		}

		peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
	}

	function text() {
		return input.substring(peg$savedPos, peg$currPos);
	}

	function location() {
		return peg$computeLocation(peg$savedPos, peg$currPos);
	}

	function expected(description, location) {
		location =
			location !== void 0
				? location
				: peg$computeLocation(peg$savedPos, peg$currPos);

		throw peg$buildStructuredError(
			[peg$otherExpectation(description)],
			input.substring(peg$savedPos, peg$currPos),
			location
		);
	}

	function error(message, location) {
		location =
			location !== void 0
				? location
				: peg$computeLocation(peg$savedPos, peg$currPos);

		throw peg$buildSimpleError(message, location);
	}

	function peg$literalExpectation(text, ignoreCase) {
		return {type: 'literal', text: text, ignoreCase: ignoreCase};
	}

	function peg$classExpectation(parts, inverted, ignoreCase) {
		return {
			type: 'class',
			parts: parts,
			inverted: inverted,
			ignoreCase: ignoreCase,
		};
	}

	function peg$anyExpectation() {
		return {type: 'any'};
	}

	function peg$endExpectation() {
		return {type: 'end'};
	}

	function peg$otherExpectation(description) {
		return {type: 'other', description: description};
	}

	function peg$computePosDetails(pos) {
		var details = peg$posDetailsCache[pos],
			p;

		if (details) {
			return details;
		} else {
			p = pos - 1;
			while (!peg$posDetailsCache[p]) {
				p--;
			}

			details = peg$posDetailsCache[p];
			details = {
				line: details.line,
				column: details.column,
			};

			while (p < pos) {
				if (input.charCodeAt(p) === 10) {
					details.line++;
					details.column = 1;
				} else {
					details.column++;
				}

				p++;
			}

			peg$posDetailsCache[pos] = details;
			return details;
		}
	}

	function peg$computeLocation(startPos, endPos) {
		var startPosDetails = peg$computePosDetails(startPos),
			endPosDetails = peg$computePosDetails(endPos);

		return {
			start: {
				offset: startPos,
				line: startPosDetails.line,
				column: startPosDetails.column,
			},
			end: {
				offset: endPos,
				line: endPosDetails.line,
				column: endPosDetails.column,
			},
		};
	}

	function peg$fail(expected) {
		if (peg$currPos < peg$maxFailPos) {
			return;
		}

		if (peg$currPos > peg$maxFailPos) {
			peg$maxFailPos = peg$currPos;
			peg$maxFailExpected = [];
		}

		peg$maxFailExpected.push(expected);
	}

	function peg$buildSimpleError(message, location) {
		return new peg$SyntaxError(message, null, null, location);
	}

	function peg$buildStructuredError(expected, found, location) {
		return new peg$SyntaxError(
			peg$SyntaxError.buildMessage(expected, found),
			expected,
			found,
			location
		);
	}

	function peg$parsestart() {
		var s0, s1, s2;

		s0 = peg$currPos;
		s1 = peg$parse_();
		if (s1 !== peg$FAILED) {
			s2 = peg$parsequerySequence();
			if (s2 !== peg$FAILED) {
				peg$savedPos = s0;
				s1 = peg$c0(s2);
				s0 = s1;
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		return s0;
	}

	function peg$parsequerySequence() {
		var s0, s1, s2, s3;

		peg$silentFails++;
		s0 = peg$currPos;
		s1 = peg$parsequery();
		if (s1 !== peg$FAILED) {
			s2 = peg$parse_();
			if (s2 !== peg$FAILED) {
				s3 = peg$parsequerySequence();
				if (s3 === peg$FAILED) {
					s3 = null;
				}
				if (s3 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$c2(s1, s3);
					s0 = s1;
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		peg$silentFails--;
		if (s0 === peg$FAILED) {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c1);
			}
		}

		return s0;
	}

	function peg$parsequery() {
		var s0, s1, s2, s3;

		s0 = peg$currPos;
		s1 = peg$parsequeryHeader();
		if (s1 !== peg$FAILED) {
			s2 = peg$parsequeryBody();
			if (s2 === peg$FAILED) {
				s2 = null;
			}
			if (s2 !== peg$FAILED) {
				s3 = peg$parse_();
				if (s3 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$c3(s1, s2);
					s0 = s1;
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		return s0;
	}

	function peg$parsequeryHeader() {
		var s0, s1, s2, s3, s4, s5, s6;

		s0 = peg$currPos;
		s1 = peg$parsequeryCommand();
		if (s1 !== peg$FAILED) {
			s2 = peg$parse_();
			if (s2 !== peg$FAILED) {
				s3 = peg$parsequeryType();
				if (s3 !== peg$FAILED) {
					s4 = peg$parse_();
					if (s4 !== peg$FAILED) {
						s5 = peg$parsequeryOptions();
						if (s5 !== peg$FAILED) {
							s6 = peg$parse_();
							if (s6 !== peg$FAILED) {
								peg$savedPos = s0;
								s1 = peg$c4(s1, s3, s5);
								s0 = s1;
							} else {
								peg$currPos = s0;
								s0 = peg$FAILED;
							}
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = peg$parsequeryCommand();
			if (s1 !== peg$FAILED) {
				s2 = peg$parse_();
				if (s2 !== peg$FAILED) {
					s3 = peg$parsequeryType();
					if (s3 !== peg$FAILED) {
						s4 = peg$parse_();
						if (s4 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c5(s1, s3);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		}

		return s0;
	}

	function peg$parsequeryCommand() {
		var s0, s1, s2;

		s0 = peg$currPos;
		if (input.charCodeAt(peg$currPos) === 36) {
			s1 = peg$c6;
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c7);
			}
		}
		if (s1 !== peg$FAILED) {
			s2 = peg$parse_queryCommand();
			if (s2 !== peg$FAILED) {
				peg$savedPos = s0;
				s1 = peg$c8(s2);
				s0 = s1;
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		return s0;
	}

	function peg$parse_queryCommand() {
		var s0, s1;

		s0 = peg$currPos;
		s1 = peg$parse_queryCommandString();
		if (s1 !== peg$FAILED) {
			peg$savedPos = s0;
			s1 = peg$c9();
		}
		s0 = s1;

		return s0;
	}

	function peg$parse_queryCommandString() {
		var s0;

		if (input.substr(peg$currPos, 6) === peg$c10) {
			s0 = peg$c10;
			peg$currPos += 6;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c11);
			}
		}
		if (s0 === peg$FAILED) {
			if (input.substr(peg$currPos, 4) === peg$c12) {
				s0 = peg$c12;
				peg$currPos += 4;
			} else {
				s0 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$c13);
				}
			}
			if (s0 === peg$FAILED) {
				if (input.substr(peg$currPos, 6) === peg$c14) {
					s0 = peg$c14;
					peg$currPos += 6;
				} else {
					s0 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c15);
					}
				}
				if (s0 === peg$FAILED) {
					if (input.substr(peg$currPos, 6) === peg$c16) {
						s0 = peg$c16;
						peg$currPos += 6;
					} else {
						s0 = peg$FAILED;
						if (peg$silentFails === 0) {
							peg$fail(peg$c17);
						}
					}
				}
			}
		}

		return s0;
	}

	function peg$parsequeryType() {
		var s0, s1, s2, s3;

		s0 = peg$currPos;
		if (input.charCodeAt(peg$currPos) === 91) {
			s1 = peg$c18;
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c19);
			}
		}
		if (s1 !== peg$FAILED) {
			s2 = peg$parse_queryType();
			if (s2 !== peg$FAILED) {
				if (input.charCodeAt(peg$currPos) === 93) {
					s3 = peg$c20;
					peg$currPos++;
				} else {
					s3 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c21);
					}
				}
				if (s3 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$c22(s2);
					s0 = s1;
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		return s0;
	}

	function peg$parse_queryType() {
		var s0;

		if (input.substr(peg$currPos, 4) === peg$c23) {
			s0 = peg$c23;
			peg$currPos += 4;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c24);
			}
		}
		if (s0 === peg$FAILED) {
			if (input.substr(peg$currPos, 4) === peg$c25) {
				s0 = peg$c25;
				peg$currPos += 4;
			} else {
				s0 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$c26);
				}
			}
			if (s0 === peg$FAILED) {
				if (input.substr(peg$currPos, 8) === peg$c27) {
					s0 = peg$c27;
					peg$currPos += 8;
				} else {
					s0 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c28);
					}
				}
			}
		}

		return s0;
	}

	function peg$parsequeryOptions() {
		var s0, s1, s2, s3, s4, s5;

		peg$silentFails++;
		s0 = peg$currPos;
		if (input.charCodeAt(peg$currPos) === 40) {
			s1 = peg$c30;
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c31);
			}
		}
		if (s1 !== peg$FAILED) {
			s2 = peg$parse_();
			if (s2 !== peg$FAILED) {
				s3 = peg$parse_queryOptions();
				if (s3 !== peg$FAILED) {
					s4 = peg$parse_();
					if (s4 !== peg$FAILED) {
						if (input.charCodeAt(peg$currPos) === 41) {
							s5 = peg$c32;
							peg$currPos++;
						} else {
							s5 = peg$FAILED;
							if (peg$silentFails === 0) {
								peg$fail(peg$c33);
							}
						}
						if (s5 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c34(s3);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		peg$silentFails--;
		if (s0 === peg$FAILED) {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c29);
			}
		}

		return s0;
	}

	function peg$parse_queryOptions() {
		var s0, s1, s2, s3, s4, s5;

		s0 = peg$currPos;
		s1 = peg$parsequeryOption();
		if (s1 !== peg$FAILED) {
			s2 = peg$parse_();
			if (s2 !== peg$FAILED) {
				if (input.charCodeAt(peg$currPos) === 44) {
					s3 = peg$c35;
					peg$currPos++;
				} else {
					s3 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c36);
					}
				}
				if (s3 !== peg$FAILED) {
					s4 = peg$parse_();
					if (s4 !== peg$FAILED) {
						s5 = peg$parse_queryOptions();
						if (s5 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c37(s1, s5);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$parsequeryOption();
		}

		return s0;
	}

	function peg$parsequeryOption() {
		var s0, s1;

		s0 = peg$currPos;
		s1 = peg$parsenodeType();
		if (s1 !== peg$FAILED) {
			peg$savedPos = s0;
			s1 = peg$c38(s1);
		}
		s0 = s1;
		if (s0 === peg$FAILED) {
			s0 = peg$parseoption();
		}

		return s0;
	}

	function peg$parseoptions() {
		var s0, s1, s2, s3, s4, s5;

		s0 = peg$currPos;
		s1 = peg$parseoption();
		if (s1 !== peg$FAILED) {
			s2 = peg$parse_();
			if (s2 !== peg$FAILED) {
				if (input.charCodeAt(peg$currPos) === 44) {
					s3 = peg$c35;
					peg$currPos++;
				} else {
					s3 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c36);
					}
				}
				if (s3 !== peg$FAILED) {
					s4 = peg$parse_();
					if (s4 !== peg$FAILED) {
						s5 = peg$parseoptions();
						if (s5 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c39(s1, s5);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$parseoption();
		}

		return s0;
	}

	function peg$parseoption() {
		var s0, s1, s2, s3, s4, s5;

		s0 = peg$currPos;
		s1 = peg$parsename();
		if (s1 !== peg$FAILED) {
			s2 = peg$parse_();
			if (s2 !== peg$FAILED) {
				if (input.charCodeAt(peg$currPos) === 61) {
					s3 = peg$c40;
					peg$currPos++;
				} else {
					s3 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c41);
					}
				}
				if (s3 !== peg$FAILED) {
					s4 = peg$parse_();
					if (s4 !== peg$FAILED) {
						s5 = peg$parseprimitive();
						if (s5 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c42(s1, s5);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = peg$parsename();
			if (s1 !== peg$FAILED) {
				peg$savedPos = s0;
				s1 = peg$c43(s1);
			}
			s0 = s1;
		}

		return s0;
	}

	function peg$parsenodeType() {
		var s0, s1, s2, s3;
